# Controlled-Versatile-Agent

./: MANIFEST.in  README.md  build-whl.sh  controlled_versatile_agent.py  cv_agent.py  cva.py  pyproject.toml  repomix.config.json  repomix_pack.sh  requirements.in  requirements.txt  对比总结.md  进化增强.md
brtech_cva/: cv_agent.py
brtech_cva/core/: audit.py  config.py  escalation.py  llm_adapter.py  logger.py  manifest.py  memory.py  permissions.py  shell.py  tool.py
brtech_cva/roles/: assistant.yaml  developer-v1.yaml
core/: audit.py  config.py  escalation.py  llm_adapter.py  logger.py  manifest.py  memory.py  permissions.py  shell.py  tool.py
roles/: code-reviewer-sample-v1.yaml  code-reviewer-v1.yaml  dba-assistant-sample-v1.yaml  developer-v1.yaml  sre-log-analyst-v1.yaml
tests/: security_audit_report.py  sim_dev_workflow.py  sim_memory_pressure.py  sim_security_boundary.py  test_code_verification.py  test_get_project_summary.py  test_gui_enhancements.py  test_new_features.py  test_performance.py  test_permissions.py  test_security_fixes.py  test_simple.py  test_token_optimization.py  test_universal_shell_capabilities.py
tools/: catalog.py
