[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "brtech-cva"
version = "1.0.0"
authors = [
    { name = "Huangyun", email = "gzhyun@gmail.com" },
]
description = "努力做一个数字人，坚决不做 NPC"
readme = "README.md"
requires-python = ">=3.11"
#license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.urls]
"Homepage" = "https://github.com/7415069/Controlled-Versatile-Agent"

[project.scripts]
cva = "brtech_cva.cv_agent:main"

[tool.setuptools]
# 修正：显式列出所有包，包括 roles
packages = ["brtech_cva", "brtech_cva.core", "brtech_cva.roles"]

[tool.setuptools.package-data]
# 确保 YAML 文件被包含
"brtech_cva.roles" = ["*.yaml", "*.yml"]
